--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Cook book</string>
+    <string-array name="category">
+        <item>Drinks</item>
+        <item>Desserts</item>
+    </string-array>
 </resources>
